# arrangement-benchmark

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml
app/: compute_arrangement.cpp
cmake/: absl.cmake  cinolib.cmake  cli11.cmake  fast_arrangement.cmake  geogram.cmake  indirect_predicates.cmake  libigl.cmake  nanobind.cmake  python.cmake
include/Arrangement/: Arrangement.h  EigenTypedef.h  Exception.h  FastArrangement.h  MatrixUtils.h  MatrixUtils.inl  MeshArrangement.h
include/arrangement/: Arrangement.h  EigenTypedef.h  Exception.h  FastArrangement.h  GeogramArrangement.h  MatrixUtils.h  MatrixUtils.inl  MeshArrangement.h
python/: pyarrangement.cpp
python/arrangement/: __init__.py  __main__.py
python/tests/: test_arrangement.py
src/: Arrangement.cpp  FastArrangement.cpp  GeogramArrangement.cpp  MeshArrangement.cpp
tests/: benchmark.cpp  test_arrangement.cpp  test_mesh_arrangement.cpp  utils.h
